Refs #8627; added caption for new coverflow; gave documentFirstHeading a text-align left to make sure it is left aligned on the newpage instead of centered

--- a/trunk/eea.mediacentre/branches/plone4/src/eea/mediacentre/skins/eea_multimedia/eea.multimedia.css
+++ b/trunk/eea.mediacentre/branches/plone4/src/eea/mediacentre/skins/eea_multimedia/eea.multimedia.css
@@ -19,6 +19,7 @@
    margin:0px;
    padding:0px;
    line-height: 1.0;
+   text-align: left;
 }
 
 #belowContent, #viewlet-above-content {
